$Id: ChangeLog,v 1.81 2010/06/07 19:50:04 stewy Exp $

ChangeLog file of MaKL - http://www.koanlogic.com/makl/changelog.html

MaKL 1.9.0
	- mk: bug in mkdep.gcc.sh helper that was causing a compilation error on
	      new versions of GCC (e.g. Ubuntu Oneiric with GCC 4.6.1)
	- cf: makl_test_dir() to specify custom directory for test files ;
	      a couple of --help fixes and cleanup ; fixed featx varname parameter ;
	      cmdline args for dash-separated ids not working
	- Add clang toolchain on Darwin (darwin-clang.tc)
	- fix depend target for C++ sources
	- OpenSolaris toolchains fix (add explicit C++ compiler)
	- QNX momentics 6.5.0 toolchain fix
	- QNX GNU toolchain for ARMv7 added

MaKL 1.8.3
	- Minix/GCC, Minix/ACK, OpenSolaris/GCC and OpenSolaris/SunStudioExpress
	  support added
	- mk: global rethinking of quote handling
	- doc: s/makl-users@koanlogic.com/makl-bug@koanlogic.com

MaKL 1.8.2
	- cf: fixed broken disabling of features ; safer tmp dir and better error ;
	  generate <pkg>_VERSION_{MAJOR,MINOR,TEENY} numeric values in header
	  and Makefile.conf files
	- mk: minor fix in .help target of dist.mk

MaKL 1.8.1
	- set /bin/bash as default shell on Linux (avoid Ubuntu dash !)
	- force $(RM) -f during lex/yacc deps execution

MaKL 1.8.0
	- added tricore toolchain provided by Thomas Kotschenreuther
	- added makl_version function to get the version of the currently installed
	  MaKL
	- cf utilities (i.e. grep, sed, tr, ...) also in toolchain
	- Solaris/GCC support added
	- DragonFly BSD support added
	- simplified auto-configuration procedure (the toolchain creation step
	  has been absorbed into configure.sh - see INSTALL)
	- added explicit --bourne_shell=... argument to top level configure
	- makl-conf also accepts non executable configure scripts
	- Intel C/C++ compiler support on Linux (icc-linux.tc)
	- produce dynamic libraries (DLL's) on Windows via MinGW and Cygwin
	- added OBJDIR to prog and lib templates for multiple target builds