@@ -35,7 +35,13 @@ $(SHLIB_NAME): $(SHLIB_OBJS)
 	$(RM) -f $(SHLIB_NAME)
 	$(__CC) -shared -fpic -o $(SHLIB_NAME) `$(LORDER) $(SHLIB_OBJS) | $(TSORT)`
 
-install-shared:
+$(SHLIBDIR):
+	$(MKINSTALLDIRS) "$(SHLIBDIR)"
+ifneq ($(strip $(__CHOWN_ARGS)),)
+	chown $(__CHOWN_ARGS) "$(SHLIBDIR)"
+endif
+
+install-shared: $(SHLIBDIR)
 	$(INSTALL) $(__INSTALL_ARGS) -m $(LIBMODE) $(SHLIB_NAME) "$(SHLIBDIR)"
 
 uninstall-shared:
