@@ -36,7 +36,13 @@ $(SHLIB_NAME): $(SHLIB_OBJS)
 	$(__CC) -shared -o $(SHLIB_NAME) -Wl,-h,$(SONAME) \
 	    `$(LORDER) $(SHLIB_OBJS) | $(TSORT)`
 
-install-shared:
+$(SHLIBDIR):
+	$(MKINSTALLDIRS) "$(SHLIBDIR)"
+ifneq ($(strip $(__CHOWN_ARGS)),)
+	chown $(__CHOWN_ARGS) "$(SHLIBDIR)"
+endif
+
+install-shared: $(SHLIBDIR)
 	$(INSTALL) $(__INSTALL_ARGS) -m $(LIBMODE) $(SHLIB_NAME) "$(SHLIBDIR)"
 	ln -sf $(SHLIB_NAME) "$(SHLIBDIR)/$(SHLIB_LINK)"
 	ln -sf $(SHLIB_NAME) "$(SHLIBDIR)/$(SONAME)"
