@@ -2,6 +2,9 @@ $Id: ChangeLog,v 1.81 2010/06/07 19:50:04 stewy Exp $
 
 ChangeLog file of MaKL - http://www.koanlogic.com/makl/changelog.html
 
+MaKL X.Y.Z
+	- mk: force MKINSTALLDIRS + chown before installing shlibs
+
 MaKL 1.9.0
 	- mk: bug in mkdep.gcc.sh helper that was causing a compilation error on
 	      new versions of GCC (e.g. Ubuntu Oneiric with GCC 4.6.1)
